--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,27 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title><%= message %></title>
+    <title>macskák</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <p><%= message %></p>
+    <form action="" method="get">
+        <table>
+            <tr>
+              <th>Szem szín</th>
+              <th>Súly</th>
+            </tr>
+              <% for( let m of macskak ) { %>
+                <tr>
+                  <td><span <%= m.id %>"><%= m.szem_szin%></span></td>
+                  <td><span <%= m.id %>"><%= m.suly%></span></td>
+              </tr>
+              <% } %>        
+        </table>
+    </form>
+
+    <a href="/macskak/new">Új hozzáadása</a>
 </body>
 </html>
